No data layer tie-in yet

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Beetup</string>
+    <string name="todays_activity">Today\'s Activity</string>
+    <string name="add_exercise_entry">Add Exercise</string>
 </resources>
